# srg

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  revgeo.html  revgeo_runner_uploadable.html  site.webmanifest
.cargo/: config.toml
.github/scripts/: run-srg.ps1  run-srg.sh
.github/workflows/: ci.yml  manual_run.yml
examples/: manual_workflow.rs  package_artifact.rs
src/: batch.rs  buffmt.rs  build_info.rs  command.rs  constants.rs  diagnostic.rs  file_output.rs  hardware_rng.rs  input.rs  io_util.rs  ladder.rs  main.rs  menu_app.rs  numeric.rs  output.rs  random_data.rs  random_number.rs  random_output.rs  random_util.rs  tables.rs  time.rs
src/file_output/: sys.rs
src/output/: progress.rs
src/time/: activity.rs  address.rs  diagnostic.rs  display.rs  high_res_timer.rs  http_date.rs  linux_input.rs  macos_input.rs  native_http.rs  sample.rs  timer_resolution.rs  unsupported_input.rs  util.rs  wayland_input.rs  windows_input.rs  worker.rs
src/time/linux_input/: sys.rs
src/time/macos_input/: sys.rs
src/time/native_http/: libcurl.rs  unsupported.rs  winhttp.rs
src/time/native_http/libcurl/: sys.rs
src/time/native_http/winhttp/: sys.rs
src/time/timer_resolution/: sys.rs
src/time/wayland_input/: sys.rs
src/time/windows_input/: sys.rs
