[package]
name = "srg"
version = "1.5.8"
edition = "2024"
rust-version = "1.97"
description = """\
Hardware RNG-based random data generator with high-precision server time sync \
utility\
"""
license = "MIT"
repository = "https://github.com/krwizxp/srg"
keywords = ["random", "rng", "cli", "time-sync", "utilities"]
categories = ["command-line-utilities", "date-and-time", "encoding"]

[lints.rust]
absolute_paths_not_starting_with_crate = "deny"
ambiguous_negative_literals = "deny"
closure_returning_async_block = "deny"
dead_code_pub_in_binary = "deny"
deprecated_in_future = "deny"
deprecated_safe_2024 = "deny"
deref_into_dyn_supertrait = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "deny"
ffi_unwind_calls = "deny"
impl_trait_overcaptures = "deny"
impl_trait_redundant_captures = "deny"
let_underscore_drop = "deny"
linker_info = "deny"
linker_messages = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_unsafe_on_extern = "deny"
non_ascii_idents = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
single_use_lifetimes = "deny"
tail_expr_drop_order = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unnameable_types = "deny"
unstable_features = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unsafe_attr_outside_unsafe = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_crate_dependencies = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

[lints.clippy]
big_endian_bytes = "allow"
blanket_clippy_restriction_lints = "allow"
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
expect_used = "deny"
implicit_return = "allow"
little_endian_bytes = "allow"
missing_docs_in_private_items = "allow"
missing_trait_methods = "allow"
non_ascii_literal = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pub_with_shorthand = "allow"
question_mark_used = "allow"
redundant_clone = "warn"
redundant_pub_crate = "allow"
restriction = { level = "warn", priority = -1 }
self_named_module_files = "allow"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
